[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/character_sheet/level_up_dialog.gd" id="1_lu"]

[node name="LevelUpDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lu")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DialogTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level Up!"
horizontal_alignment = 1

[node name="FeaturesLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
bbcode_enabled = true
fit_content = true
text = "New features..."

[node name="HPSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HPHeader" type="Label" parent="Panel/MarginContainer/VBoxContainer/HPSection"]
layout_mode = 2
text = "Hit Points:"

[node name="HPButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HPSection"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="HPAverageBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/HPSection/HPButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Take Average"

[node name="HPRollBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/HPSection/HPButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Roll"

[node name="HPResultLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HPSection"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = "Choose how to gain HP."

[node name="ASIContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
visible = false

[node name="ASIInfoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ASIContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ability Score Improvement"
autowrap_mode = 2

[node name="DialogButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="CancelBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/DialogButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="ConfirmBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/DialogButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Confirm Level Up"
